uf-10702: Add logs and some small changes to exception handling.